# moba-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.dev-resources/docs/: pydantic-settings-api-reference.md
resources/: metadata.json
scripts/: create_sample_db.py  run_server.sh
src/moba_mcp/: __init__.py  config.py  server.py
